# wagmiphotos

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  HANDOFF.md  README.md  TODO.md  contract.json  pyproject.toml
.claude/skills/running-locally/: SKILL.md  seed-demo.sql
.superpowers/sdd/: final-review-fixes-report.md
deploy/gmi/: .env.example  README.md  docker-compose.yml
docs/: HANDOFF-2026-07-04.md  HANDOFF-2026-07-07.md  HANDOFF-2026-07-08-stripe-billing.md  HANDOFF-2026-07-09-byok-live-stripe-pending.md  HANDOFF-2026-07-10-async-byok-gen.md
docs/legal/: acceptable-use-policy.md
docs/plans/: 2026-06-23-sharedcache-mvp.md
docs/specs/: 2026-06-23-sharedcache-design.md
docs/superpowers/plans/: 2026-07-01-backfill-worker.md  2026-07-01-demand-driven-cache.md  2026-07-02-cloudflare-worker.md  2026-07-02-monorepo-restructure.md  2026-07-02-worker-served-frontend.md  2026-07-03-gmi-embedder-deployment.md  2026-07-03-library-page.md  2026-07-03-public-url-config.md  2026-07-06-accounts-magic-link-auth.md  2026-07-06-bge-edge-embeddings.md  2026-07-07-demand-rehost-tombstones.md  2026-07-07-large-cap-original-url.md  2026-07-07-wagmiphotos-rename-and-scale.md  2026-07-08-stripe-subscriptions-paid-api.md  2026-07-09-byok-self-serve-generation.md  2026-07-09-collection-slots.md  2026-07-09-collections.md  2026-07-09-homepage-compare-move-api-cards.md  2026-07-09-ui-polish.md  2026-07-10-read-write-split-async-collection-gen.md  2026-07-11-docs-consolidation.md  2026-07-13-my-collections-ux-async-gen.md  2026-07-20-public-library-likes.md  2026-07-21-homepage-stats-showcase.md
docs/superpowers/specs/: 2026-07-01-cloudflare-edge-cache-design.md  2026-07-01-demand-driven-cache-design.md  2026-07-02-monorepo-restructure-design.md  2026-07-02-worker-served-frontend-design.md  2026-07-03-gmi-embedder-deployment-design.md  2026-07-03-library-page-design.md  2026-07-03-public-url-config-design.md  2026-07-06-accounts-magic-link-auth-design.md  2026-07-06-bge-edge-embeddings-design.md  2026-07-07-demand-rehost-tombstones-design.md  2026-07-07-large-cap-original-url-design.md  2026-07-07-wagmiphotos-rename-and-scale-design.md  2026-07-08-stripe-subscriptions-paid-api-design.md  2026-07-09-byok-self-serve-generation-design.md  2026-07-09-cdn-hostname-open-license-band-design.md  2026-07-09-collection-slots-design.md  2026-07-09-collections-design.md  2026-07-09-homepage-compare-move-api-cards-design.md  2026-07-09-ui-polish-design.md  2026-07-10-read-write-split-async-collection-gen-design.md  2026-07-11-docs-consolidation-design.md  2026-07-13-my-collections-ux-async-gen-design.md  2026-07-15-batched-fast-seed-design.md  2026-07-20-public-library-likes-design.md  2026-07-21-homepage-stats-showcase-design.md
projects/backfill/: Dockerfile  pyproject.toml
projects/backfill/scripts/: README.md  seed_to_target.sh
projects/backfill/src/sharedcache/backfill/: __main__.py  seed_pd12m.py  worker.py
projects/backfill/src/wagmiphotos/backfill/: __main__.py  reconcile_orphans.py  seed_pd12m.py  worker.py
projects/backfill/tests/: fakes.py  test_backfill.py  test_reconcile_orphans.py  test_seed_pd12m.py
projects/common/: pyproject.toml
projects/common/tests/: test_bge.py  test_cf_api.py  test_clip.py  test_config.py  test_contract.py  test_d1_client.py  test_d1_migration.py  test_denylist.py  test_floor.py  test_models.py  test_moderation.py  test_vectorize_client.py
projects/embedder/: Dockerfile  pyproject.toml
projects/embedder/src/sharedcache/embedder/: __main__.py  app.py  model.py
projects/embedder/tests/: test_app.py
projects/generation/: pyproject.toml
projects/generation/src/sharedcache/generation/: generator.py
projects/generation/src/wagmiphotos/generation/: generator.py  processor.py  storage.py
projects/generation/tests/: test_generator.py  test_processor.py  test_storage.py
projects/worker/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
projects/worker/migrations/: 0001_init.sql  0002_queries_generate.sql  0003_assets_browse_index.sql  0004_accounts.sql  0005_login_nonce.sql  0006_backfill_reliability.sql  0007_derived_urls.sql  0012_billing.sql  (+12 more)
scripts/: migrate.py  migrate.sql  seed.py  seed_pd12m.py
src/sharedcache/: api.py  backfill.py  cache_service.py  config.py  cost_meter.py  d1_client.py  embedder.py  floor.py  generator.py  index.py  models.py  pricing.py  processor.py  ratelimit.py  storage.py  vectorize_client.py
tests/: conftest.py  fakes.py  test_api.py  test_backfill.py  test_cache_lazy.py  test_cache_service.py  test_clip.py  test_config.py  test_cost_meter.py  test_d1_client.py  test_d1_migration.py  test_embedder.py  test_embedder_clip.py  test_floor.py  test_generator.py  test_index.py  test_index_pg.py  test_models.py  test_processor.py  test_ratelimit.py  test_seed_pd12m.py  test_storage.py  test_vectorize_client.py
web/: index.html
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: auth.ts  d1.ts  floor.ts  handler.ts  index.ts  normalize.ts
worker/test/: auth.test.ts  d1.test.ts  handler.test.ts  healthz.test.ts  router.test.ts  vectorize.test.ts
(+89 files in other folders)
