[project]
name = "sharedcache"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "google-genai>=0.3",
    "pillow>=10",
    "numpy>=1.26",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "genblaze[openai]>=0.4,<0.5",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sharedcache"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
