[project]
name = "sharedcache"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.5",
    "pillow>=10",
    "httpx>=0.27",
    "genblaze[openai]>=0.4,<0.5",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sharedcache"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
