[project]
name = "sharedcache-backfill"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "sharedcache-common", "sharedcache-generation"]
[project.optional-dependencies]
# Real BGE model loading only — keeps the uv workspace and tests torch-free.
model = ["sentence-transformers"]
[project.scripts]
sharedcache-backfill = "sharedcache.backfill.__main__:main"
[tool.uv.sources]
sharedcache-common = { workspace = true }
sharedcache-generation = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/sharedcache"]
