[project]
name = "wagmiphotos-backfill"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "wagmiphotos-common", "wagmiphotos-generation", "pyarrow>=17"]
[project.optional-dependencies]
# Real BGE model loading only — keeps the uv workspace and tests torch-free.
# torch is pinned to the CPU wheel index in the root pyproject (CPU-only box).
model = ["sentence-transformers", "torch"]
[project.scripts]
wagmiphotos-backfill = "wagmiphotos.backfill.__main__:main"
[tool.uv.sources]
wagmiphotos-common = { workspace = true }
wagmiphotos-generation = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/wagmiphotos"]
