[project]
name = "sharedcache-embedder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.optional-dependencies]
# Real model serving only — keeps the uv workspace and tests torch-free.
model = ["open-clip-torch>=2.24", "torch>=2.4", "pillow>=10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/sharedcache"]
