[project]
name = "sharedcache-embedder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.optional-dependencies]
# Real model serving only — keeps the uv workspace and tests torch-free.
model = ["open-clip-torch==3.3.0", "torch==2.12.1", "torchvision==0.27.1", "pillow==12.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/sharedcache"]
